tests/suite/snapshots/suite__check__tests__check__bad-var-shadowing3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-var-shadowing3.xi:6:21]
   │
 6 │                     bar, baz, foo: int
   ·                     ─────────┬────────  
   ·                              ╰────────── Name already bound in environment
───╯

